Use @Precompile for interface class generation

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     <module>manifold-dbpedia</module>
     <module>manifold-dbpedia-test</module>
     <module>manifold-dbpedia-interfaces</module>
+    <module>manifold-dbpedia-query</module>
   </modules>
 
   <properties>
